--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,3 +50,5 @@ set -w -g window-status-current-bg red
 # bar), resize panes. For default bindings see `tmux list-keys` and `tmux
 # list-keys -t vi-copy`.
 set -g mouse on
+
+set -sg escape-time 0
