--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,8 @@ set -g status-interval 60 # Default is 15.
 set -g renumber-windows on
 
 # Highlight active window.
-set -w -g window-status-current-bg red
+set -w -g window-status-current-bg '#544190'
+# set -w -g window-status-current-bg red
 
 # Mouse can be used to select panes, select windows (by clicking on the status
 # bar), resize panes. For default bindings see `tmux list-keys` and `tmux
