--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,10 +33,8 @@ bind \ split-window -h -c '#{pane_current_path}' # normally prefix-%
 bind - split-window -v -c '#{pane_current_path}' # normally prefix-"
 
 # Status bar.
-# set -g status-bg '#343d46'
-set -g status-bg default
-# set -g status-fg white
-set -g status-fg default
+set -g status-bg '#343d46'
+set -g status-fg white
 set -g status-left-length 40
 set -g status-left '#[fg=yellow]#S ⧉ '
 set -g status-right "#[fg=yellow]$USER@#h #[fg=magenta]%l:%M %p"
@@ -46,9 +44,7 @@ set -g status-interval 60 # Default is 15.
 set -g renumber-windows on
 
 # Highlight active window.
-# set -w -g window-status-current-bg '#544190'
-# set -w -g window-status-current-bg red
-set -w -g window-status-current-bg default
+set -w -g window-status-current-bg '#544190'
 
 # Mouse can be used to select panes, select windows (by clicking on the status
 # bar), resize panes. For default bindings see `tmux list-keys` and `tmux
