--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,3 +52,8 @@ set -w -g window-status-current-bg '#544190'
 set -g mouse on
 
 set -sg escape-time 0
+
+# Add truecolor support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+# Default terminal is 256 colors
+set -g default-terminal "screen-256color"
