--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,18 +33,41 @@ bind \ split-window -h -c '#{pane_current_path}' # normally prefix-%
 bind - split-window -v -c '#{pane_current_path}' # normally prefix-"
 
 # Status bar.
-set -g status-bg '#343d46'
-set -g status-fg white
-set -g status-left-length 40
-set -g status-left '#[fg=yellow]#S ⧉ '
-set -g status-right "#[fg=yellow]$USER@#h #[fg=magenta]%l:%M %p"
-set -g status-interval 60 # Default is 15.
+# set -g status-bg '#343d46'
+# set -g status-fg white
+# set -g status-left-length 40
+# set -g status-left '#[fg=yellow]#S ⧉ '
+# set -g status-right "#[fg=yellow]$USER@#h #[fg=magenta]%l:%M %p"
+# set -g status-interval 60 # Default is 15.
+
+set -g status-position bottom
+set -g status-bg colour234
+set -g status-fg colour137
+set -g status-attr dim
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-fg colour81
+setw -g window-status-current-bg colour238
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+
+setw -g window-status-fg colour138
+setw -g window-status-bg colour235
+setw -g window-status-attr none
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour1
 
 # Automatically renumber window numbers on closing a pane (tmux >= 1.7).
 set -g renumber-windows on
 
 # Highlight active window.
-set -w -g window-status-current-bg '#544190'
+# set -w -g window-status-current-bg '#544190'
 
 # Mouse can be used to select panes, select windows (by clicking on the status
 # bar), resize panes. For default bindings see `tmux list-keys` and `tmux
