--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,3 +80,5 @@ set -sg escape-time 0
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Default terminal is 256 colors
 set -g default-terminal "screen-256color"
+
+setw -g clock-mode-style 24
