--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 #global prefix mapping
 set -g prefix C-Space
 
+# Set key map for copy and choice modes.
+set-window-option -g mode-keys vi
+
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
