save bash changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 #global prefix mapping
-set -g prefix C-Space
+# set -g prefix C-Space
 
 # Set key map for copy and choice modes.
 set-window-option -g mode-keys vi
@@ -28,7 +28,7 @@ unbind Up
 bind -r Up resize-pane -U 5
 
 # Fast toggle (normally prefix-l).
-bind ^space last-window
+bind ^b last-window
 
 # Intuitive window-splitting keys.
 bind | split-window -h -c '#{pane_current_path}' # normally prefix-%
