--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # makes zsh as a default shell
-set-option -g default-shell /bin/zsh
+# set-option -g default-shell /bin/zsh
 
 #global prefix mapping
 set -g prefix C-Space
