change the tmux config file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,8 @@ set-window-option -g mode-keys vi
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
+bind-key -n C-k clear-history
+
 #pane navigations bindings vim-like
 unbind h
 bind h select-pane -L
