--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,7 @@
 # Set prefix to space.
 unbind-key C-b
 set-option -g prefix C-Space
-
-# Bindings:
-# - to see current bindings:
-#   tmux list-keys
+bind-key ^space last-window
 
 # Open new/split panes with the path of the current pane.
 unbind-key c
@@ -34,16 +31,9 @@ bind-key -r Down resize-pane -D 5
 unbind-key Up
 bind-key -r Up resize-pane -U 5
 
-# Fast toggle between current and last-used window (normally prefix-l).
-bind-key ^space last-window
-
 # `^space ^space` is awfully close to the destructive `^space space`, which
 # trashes the layout. Providea quick way to get back to the previous-used
 # layout.
-#
-# Normally used for previous-window, but I never use that, prefering numeric
-# access.
-bind-key p select-layout -o
 
 # Intuitive window-splitting keys.
 bind-key | split-window -h -c '#{pane_current_path}' # normally prefix-%
@@ -51,10 +41,11 @@ bind-key \ split-window -h -c '#{pane_current_path}' # normally prefix-%
 bind-key - split-window -v -c '#{pane_current_path}' # normally prefix-"
 
 # Status bar.
-set-option -g status-style 'bg=#373b41,fg=white,bold,italics'
+set-option -g status-style 'bg=#373b41,fg=white'
 set-option -g status-left-length 40
-set-option -g status-left '#[fg=yellow,bold,italics]#S § ' # SECTION SIGN (UTF-8: c2 a7)
-set-option -g status-right "#[fg=yellow,bold,italics]$USER@#h #[fg=magenta]%l:%M %p"
+# set-option -g status-left '#[fg=yellow]#S § ' # SECTION SIGN (UTF-8: c2 a7)
+set-option -g status-left ''
+set-option -g status-right "#[fg=yellow]$USER@#h #[fg=magenta]%l:%M %p"
 set-option -g status-interval 60 # Default is 15.
 
 # Automatically renumber window numbers on closing a pane (tmux >= 1.7).
@@ -89,9 +80,6 @@ bind-key -T copy-mode-vi Escape send-keys -X cancel
 # line number gutter in Vim + 80 columns of text + 1 column breathing room
 # (default looks to be about 79).
 set-option -w -g main-pane-width 85
-
-# set-option -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ',xterm-256color:Tc'
 
 set-option -g history-limit 4096
 
