--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,9 +54,9 @@ set-option -g status-interval 60 # Default is 15.
 set-option -g renumber-windows on
 
 # Highlight active window.
-# set-option -w -g window-status-current-style 'bg=colour238,fg=yellow'
+set-option -w -g window-status-current-style 'bg=colour238,fg=yellow'
 # set-option -w -g window-status-current-style 'bg=colour238,fg=magenta'
-set-option -w -g window-status-current-style 'bg=colour238,fg=green'
+# set-option -w -g window-status-current-style 'bg=colour238,fg=green'
 
 set-option -w -g xterm-keys on
 
