--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,10 @@ bind-key \ split-window -h -c '#{pane_current_path}' # normally prefix-%
 bind-key - split-window -v -c '#{pane_current_path}' # normally prefix-"
 
 # Status bar.
-set-option -g status-style 'bg=#373b41,fg=white'
+
+# solarized light colors
+set-option -g status-style 'bg=#eee8d5,fg=#073642'
+# set-option -g status-style 'bg=#373b41,fg=white'
 set-option -g status-left-length 40
 # set-option -g status-left '#[fg=yellow]#S § ' # SECTION SIGN (UTF-8: c2 a7)
 set-option -g status-left ''
@@ -54,7 +57,10 @@ set-option -g status-interval 60 # Default is 15.
 set-option -g renumber-windows on
 
 # Highlight active window.
-set-option -w -g window-status-current-style 'bg=colour238,fg=yellow'
+# solarized light colors
+set-option -w -g window-status-current-style 'fg=#d33682'
+# default colors
+# set-option -w -g window-status-current-style 'bg=colour238,fg=yellow'
 # set-option -w -g window-status-current-style 'bg=colour238,fg=magenta'
 # set-option -w -g window-status-current-style 'bg=colour238,fg=green'
 
