--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,8 +45,9 @@ bind-key - split-window -v -c '#{pane_current_path}' # normally prefix-"
 # Status bar.
 
 # solarized light colors
-set-option -g status-style 'bg=#eee8d5,fg=#073642'
-# set-option -g status-style 'bg=#373b41,fg=white'
+# set-option -g status-style 'bg=#eee8d5,fg=#073642'
+# normal
+set-option -g status-style 'bg=#373b41,fg=white'
 set-option -g status-left-length 40
 # set-option -g status-left '#[fg=yellow]#S § ' # SECTION SIGN (UTF-8: c2 a7)
 set-option -g status-left ''
@@ -58,9 +59,9 @@ set-option -g renumber-windows on
 
 # Highlight active window.
 # solarized light colors
-set-option -w -g window-status-current-style 'fg=#d33682'
+# set-option -w -g window-status-current-style 'fg=#d33682'
 # default colors
-# set-option -w -g window-status-current-style 'bg=colour238,fg=yellow'
+set-option -w -g window-status-current-style 'bg=colour238,fg=yellow'
 # set-option -w -g window-status-current-style 'bg=colour238,fg=magenta'
 # set-option -w -g window-status-current-style 'bg=colour238,fg=green'
 
