save tmux config and zshrc nvim alias

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -135,3 +135,11 @@ set-environment -g SHLVL 1
 bind-key C-l clear-history
 
 source-file -q ~/.tmux-local.conf
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
