change the colorschdme to light

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,10 +44,10 @@ bind-key - split-window -v -c '#{pane_current_path}' # normally prefix-"
 
 # Status bar.
 
-# solarized light colors
-# set-option -g status-style 'bg=#eee8d5,fg=#073642'
+# for light colors
+set-option -g status-style 'bg=#eee8d5,fg=#073642'
 # normal
-set-option -g status-style 'bg=#373b41,fg=white'
+# set-option -g status-style 'bg=#373b41,fg=white'
 set-option -g status-left-length 40
 # set-option -g status-left '#[fg=yellow]#S § ' # SECTION SIGN (UTF-8: c2 a7)
 set-option -g status-left ''
@@ -58,10 +58,10 @@ set-option -g status-interval 60 # Default is 15.
 set-option -g renumber-windows on
 
 # Highlight active window.
-# solarized light colors
-# set-option -w -g window-status-current-style 'fg=#d33682'
+# for light colors
+set-option -w -g window-status-current-style 'fg=#d33682'
 # default colors
-set-option -w -g window-status-current-style 'bg=colour238,fg=yellow'
+# set-option -w -g window-status-current-style 'bg=colour238,fg=yellow'
 # set-option -w -g window-status-current-style 'bg=colour238,fg=magenta'
 # set-option -w -g window-status-current-style 'bg=colour238,fg=green'
 
